Fix missing border on trashbin

--- a/core/css/server.css
+++ b/core/css/server.css
@@ -1177,7 +1177,8 @@ div.ui-datepicker, div.ui-timepicker {
 
 .nav-trashbin {
   background-color: #31363b;
-  border-color: #706f6e; }
+  border-color: #706f6e;
+  border-right: 1px solid #706f6e; }
 
 /* App Sidebar -------------------------------------------------------------- */
 #app-sidebar {
